--- a/.pages.yml
+++ b/.pages.yml
@@ -26,3 +26,14 @@ content:
         fields:
           - { name: url, label: URL, type: image }
       - { name: body, label: Body, type: rich-text }
+  - name: tags
+    label: Tags
+    type: collection
+    path: _tags
+    view:
+     fields: [title ]
+     
+    fields:
+      - { name: title, label: Title, type: string, required: true }
+    
+    
