--- a/.pages.yml
+++ b/.pages.yml
@@ -8,7 +8,7 @@ content:
     type: collection
     path: _posts
     view:
-      fields: [ coverImage, title, date, status ]
+      fields: [ coverImage, title, date, publish ]
     fields:
       - { name: title, label: Title, type: string, required: true }
       - { name: excerpt, label: Excerpt, type: string }
@@ -28,7 +28,7 @@ content:
       - { name: body, label: Body, type: rich-text }
       - { name: tags, label: Tags, type: string, list: true }
       - { name: category, label: Category, type: string, list: true }
-      - { name: status, label: Status, type: boolean }
+      - { name: publish, label: Publish, type: boolean }
 
   - name: about
     label: About
